// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`real store (hk) > pseudocode snapshot: Achievement 1`] = `
"fsm Achievement {
  start State 1

  state State 1 {
    Trigger2dEvent(trigger=OnTriggerEnter2D, collideTag="", collideLayer="", sendEvent=->"ENTER", storeCollider=var "")
    on ENTER -> State 3
  }

  state State 2 {
    CallMethodProper(gameObject=var "GameManager", behaviour="GameManager", methodName="AwardAchievement", parameters=[1 elems], storeResult=(unset var))
  }

  state State 3 {
    GetPlayerDataInt(gameObject=var "GameManager", intName="stagPosition", storeValue=var "Current Position")
    IntCompare(integer1=var "Current Position", integer2=9, equal=->"ENTER", lessThan=(none), greaterThan=(none), everyFrame=false)
    on ENTER -> State 2
    on FINISHED -> State 1
  }
}"
`;

exports[`real store (hk) > pseudocode snapshot: Acid Armour Check 1`] = `
"fsm Acid Armour Check {
  start Pause

  state Check {
    PlayerDataBoolTest(gameObject=var "GameManager", boolName="hasAcidArmour", isTrue=->"ENABLE", isFalse=(none))
    on ENABLE -> Enable
    on GET ACID ARMOUR -> Recheck
  }

  state Enable {
    SetCollider(gameObject=Self, active=true)
  }

  state Recheck {
    on FINISHED -> Check
  }

  state Pause {
    SetCollider(gameObject=Self, active=false)
    NextFrameEvent(sendEvent=->"FINISHED")
    on FINISHED -> Check
  }
}"
`;

exports[`real store (hk) > pseudocode snapshot: Acid Armour Check 2`] = `
"fsm Acid Armour Check {
  start Pause

  state Check {
    PlayerDataBoolTest(gameObject=var "GameManager", boolName="hasAcidArmour", isTrue=->"DISABLE", isFalse=(none))
    on DISABLE -> Disable
    on GET ACID ARMOUR -> Recheck
  }

  state Disable {
    SetDamageHeroAmount(target=Self, damageDealt=0)
  }

  state Recheck {
    on FINISHED -> Check
  }

  state Pause {
    NextFrameEvent(sendEvent=->"FINISHED")
    on FINISHED -> Check
  }
}"
`;
